--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
