--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
-    "timeago.js": "^4.0.2"
+    "timeago.js": "^4.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
