--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   "rules": {
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
+    "react-hooks/exhaustive-deps": "warn",
     "comma-dangle": [
       "error",
       {
@@ -33,7 +34,7 @@
     ],
     "react/prop-types": 0,
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "warn"
     // "react/display-name": 0
   }
 }
