--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
       "error",
       {
         "arrays": "always-multiline",
-        "objects": "always-multiline"
+        "objects": "always-multiline",
+        "imports": "always-multiline"
       }
     ],
     "space-before-function-paren": [
