--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
+    "json2mq": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.5.5",
